formatted code layout

--- a/public/html/addingForm.html
+++ b/public/html/addingForm.html
@@ -8,9 +8,9 @@
 <body>
 <div class="container">
 <h2>Adding new rectangle </h2>
-<h1>Please enter valid/supported color names only!</h1>
-<h1>whatever colour-name you provide will be used as a back-ground for that rectangle</h1>
-<h1>I could provide a list but it would be limiting user choice</h1>
+<p>Please enter valid/supported color names only!</p>
+<p>whatever colour-name you provide will be used as a back-ground for that rectangle</p>
+<p>I could provide a list but it would be limiting user choice</p>
 
 
 <form action="/addNewRectangle" method="post">
